corrction && fix all test